# HSE_2Course_Algorithms

Set1/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  list.h
Set2/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6b.cpp
Set3/: A1i.cpp  A2.cpp  A2i.cpp  A3i.cpp  CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6.cpp  Tests.cpp
Set3/A2/data_for_A2/: graph2.txt  graph3.txt  graph4.txt  graph7.txt
Set3/A3/: A3i.cpp
Set3/A3/data_for_A3/: graph1.txt  graph2.txt  graph3.txt
Set3/GraphCreating/: randomArrays.py  semiSortedArrays.py  sortedArrays.py
Set3/data_for_A2/: graph1.txt  graph5.txt  graph6.txt
