cmake_minimum_required(VERSION 3.27)
project(Set3)

set(CMAKE_CXX_STANDARD 20)

add_executable(P1 P1.cpp)
add_executable(P2 P2.cpp)
add_executable(P3 P3.cpp)
add_executable(P4 P4.cpp)
add_executable(P5 P5.cpp)
add_executable(P6 P6.cpp)
add_executable(A2 A2.cpp)
add_executable(A2i A2i.cpp)
add_executable(A3i A3i.cpp)
